--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
        <div class="hero">
             <div class="timmer">
-                <h2><span id="hour"></span> <span id="miniute">00</span>.<span id="second">00</span>.<span id="milisecond">00</span></h2>
+                <h2><span id="hour">00</span>.<span id="miniute">00</span>.<span id="second">00</span>.<span id="milisecond">00</span></h2>
             </div>
             <div class="buttons">
                 <button value="start">Start</button>
